fixed responsive design on mobile

--- a/general.sass
+++ b/general.sass
@@ -7,20 +7,33 @@ $hover: $color
 $background-color: #fff
 $alternate-color: #eee
 
+*
+  box-sizing: border-box
+
 body
   background-color: $background-color
-  font-size: 23vmin
+  font-size: 11em
   margin: -.2em 0 0 0
+  width: 100%
+  height: 100%
+  text-align: center
+  position: fixed
 
-div
-  margin: 0 auto
-  width: 35vw
+.profile
+  width: 100px
+  height: 100px
+  border-radius: 50%
+  border: 3px solid $lightestest
+  vertical-align: top
+
 
 h1, h2, h3, h4
-  text-align: center
   margin: 0
   padding: 0
   font-family: $bree
+
+h2, h3, h4
+  line-height: 1.8em
 
 a
   text-decoration: none
@@ -33,21 +46,25 @@ h1
   font-size: 1.15em
   font-weight: 400
   color: $color
-  background-color: $alternate-color
-  line-height: 40vh
 
 h2
-  font-size: .34em
+  font-size: .35em
   color: $lighter
-  line-height: 20vh
 
 h3
-  font-size: .26em
+  font-size: .27em
   color: $lightest
-  background-color: $alternate-color
-  line-height: 25vh
 
 h4
-  font-size: .165em
+  font-size: .255em
   color: $lightestest
-  line-height: 15vh
+  margin-bottom: 1em
+
+@media only screen and (max-width: 800px)
+  body
+    font-size: 8em
+
+
+@media only screen and (max-width: 600px)
+  body
+    font-size: 7em
